--- a/frontend/retenciones/angular.json
+++ b/frontend/retenciones/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Refinancia",
+            "outputPath": "dist/retenciones",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -69,18 +69,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Refinancia:build"
+            "browserTarget": "retenciones:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Refinancia:build:production"
+              "browserTarget": "retenciones:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Refinancia:build"
+            "browserTarget": "retenciones:build"
           }
         },
         "test": {
@@ -118,16 +118,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Refinancia:serve"
+            "devServerTarget": "retenciones:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "Refinancia:serve:production"
+              "devServerTarget": "retenciones:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "Refinancia"
+  "defaultProject": "retenciones"
 }
